fix: menu actions alignment

--- a/src/components/molecules/Menu.module.css
+++ b/src/components/molecules/Menu.module.css
@@ -28,6 +28,7 @@
 .actions {
   order: 2;
   display: flex;
+  margin-left: auto;
 }
 
 .actions > * {
